--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,9 @@ exclude:
 #  card: summary
 #logo: logo.png
 #social:
-#  name: Shangzhi Huang
+#  name: Zhen Huang
 #  links:
-#    - https://twitter.com/ngzhio
-#    - https://www.facebook.com/ngzhio
-#    - https://github.com/ngzhio
-#google_site_verification: u4WXQl0Eu66rsQo2kRdCNx
+#    - https://twitter.com/QuNoe7
+#    - https://github.com/larryhuang98
+#google_site_verification: 
 lang: en
