--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,10 @@ exclude:
 #  username: 
 #  card: summary
 #logo: logo.png
-#social:
-#  name: Zhen Huang
-#  links:
-#    - https://twitter.com/QuNoe7
-#    - https://github.com/larryhuang98
+social:
+  name: Zhen Huang
+  links:
+    - https://twitter.com/QuNoe7
+    - https://github.com/larryhuang98
 #google_site_verification: 
 lang: en
