--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,6 @@
 - title: Twitter
-  url: https://twitter.com/ngzhio
+  url: https://twitter.com/QuNoe7
   icon: fab fa-twitter
 - title: GitHub
-  url: https://github.com/ngzhio/jekyll-theme-hamilton
+  url: https://github.com/larryhuang98
   icon: fab fa-github
